<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/recipes" />
        <item
            android:id="@+id/nav_cookwith"
            android:icon="@drawable/ic_cookwith"
            android:title="@string/cookwith" />
        <item
            android:id="@+id/nav_helper"
            android:icon="@drawable/ic_baseline_no_food_24"
            android:title="@string/helper" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_shoppingcart"
            android:icon="@drawable/ic_shoppingcart"
            android:title="@string/shoppingcart" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>




</menu>