<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp"
    tools:context=".views.shoppingcart.ShoppingCartFragment"
    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"

        android:id="@+id/header"
        android:background="#F1FEFF"
        >

        <TextView
            android:id="@+id/cartheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Добавляйте товары в список покупок"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"

            android:layout_marginTop="5dp"



            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardbelow"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            android:layout_below="@id/cartheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

        >
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:maxLength="25"
                        android:inputType="text"
                        android:hint="@string/productNameHint"
                        android:layout_centerHorizontal="true"

                        android:id="@+id/inputname"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:maxLength="20"
                        android:layout_centerHorizontal="true"
                        android:inputType="text"
                        android:hint="@string/quantityHint"
                        android:layout_below="@id/inputname"

                        android:id="@+id/inputquantity"
                        />

                </com.google.android.material.textfield.TextInputLayout>








            </LinearLayout>




        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            android:layout_below="@id/cardbelow"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8sp"
            android:layout_marginRight="4sp"
            app:cardUseCompatPadding="true">

            <Button

                android:id="@+id/enter"
                android:layout_width="wrap_content"
                android:layout_height="35sp"


                android:text="@string/addBtnText"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/button_background"
                android:layout_marginBottom="2dp"

                android:adjustViewBounds="false"

                />
        </androidx.cardview.widget.CardView>



    </RelativeLayout>

    <TextView
        android:id="@+id/shoppingcarttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoppingcart"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/header"


        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoppingcarttext">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:scrollbars="vertical"

            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/emptycv"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DCDCDC"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"


                    android:text="@string/emptyList"
                    android:textSize="35dp"


                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>








</RelativeLayout>