...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <RelativeLayout
            android:id="@+id/female"

            android:layout_width="150dp"
            android:background="@color/malefemalenonfocused"
            android:layout_height="150dp">

            <ImageView
...
        app:counterMaxLength="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="15dp"
            android:hint="Введите ваш возраст"
...
        app:counterMaxLength="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="15dp"
            android:hint="Введите ваш рост в см"
...
        app:counterMaxLength="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите ваш вес в кг"
            android:maxLength="3"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
...
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="50dp"
        app:cardUseCompatPadding="true">

        <Button
            android:id="@+id/applybtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Применить"

            android:background="@drawable/button_background"
...
