<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Добавьте ингредиенты в список"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"

        android:layout_marginRight="18dp"
        android:background="#F1FEFF">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardbelow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="25"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputIngredientName"
                        android:layout_width="match_parent"
                        android:maxLength="25"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:inputType="text"
                        android:hint="@string/cookwithIngredientHint"
                        />

                </com.google.android.material.textfield.TextInputLayout>





            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/addIngredientBtn"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_gravity="right"
            android:layout_marginTop="8sp"
            android:layout_below="@id/cardbelow"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="4sp"
            android:adjustViewBounds="false"
            android:text="@string/addBtnText"
            android:background="@drawable/button_background"


            android:textColor="@color/colorPrimaryDark"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addIngredientBtn"
            android:layout_marginTop="5dp"
            android:text="@string/IngredientList"
            android:textAlignment="center"


            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"

            />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientsListView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="7dp"


            android:scrollbars="vertical"

            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/emptyview"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DCDCDC"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"


                    android:text="@string/emptyList"
                    android:textSize="35dp"


                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"

        >

        <Button
            android:id="@+id/cookWithGoToSearchBtn"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:layout_gravity="right"

            android:layout_marginRight="4sp"
            android:adjustViewBounds="false"
            android:text="@string/searchBtnText"


            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/button_background"
            />

    </LinearLayout>


</LinearLayout>